# django-completion

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml  zizmor.yml
CHANGELOG/: 0.1.0.md
docs/: PLAN.md  api.md  how_it_works.md  index.md  installation.md  troubleshooting.md  usage.md
scripts/: release.py
src/django_completion/: __init__.py  apps.py  cache.py  classify.py  cli.py  fuzzy.py
src/django_completion/management/commands/: autocomplete.py
src/django_completion/scripts/: bash_completion.sh.tmpl  zsh_completion.zsh.tmpl
tests/: conftest.py  test_cache.py  test_classify.py  test_django_completion.py  test_fuzzy.py  test_shell.py
tests/projectname/: .django-completion-cache.json  manage.py
tests/projectname/projectname/: asgi.py  settings.py  urls.py  wsgi.py
tests/projectname/testproject/: settings.py
tests/testproject/: .django-completion-cache.json  manage.py  settings.py
tests/testproject/testproject/: asgi.py  urls.py  wsgi.py
