[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-completion"
version = "0.1.0"
description = "Shell autocomplete and intelligent suggestions for Django's manage.py"
readme = "README.md"
authors = [
  {name = "Soldatov Serhii", email = "soldatov.own@gmail.com"}
]
maintainers = [
  {name = "Soldatov Serhii", email = "soldatov.own@gmail.com"}
]
classifiers = [
    "Typing :: Typed",
    # TODO: Add additional classifiers as needed
]
license = {text = "MIT"}
dependencies = [
  "django>=4.2",
]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
    "pytest-django",
    "tomli; python_version < '3.11'",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/soldatov-ss/django_completion/issues"
changelog = "https://github.com/soldatov-ss/django_completion/releases"
documentation = "https://soldatov-ss.github.io/django_completion/"
homepage = "https://github.com/soldatov-ss/django_completion"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testproject.settings"
pythonpath = ["tests/testproject"]

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"
indent-width = 4
lint.exclude = [
    'venv', '.git',
    '.idea', '__pycache__',
]
lint.select = [
    "I", # isort
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # complexity
    "N", # pep8-naming
    "RUF", # ruff
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT", # flake-pytest-style
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.uv]
package = true
default-groups = ["dev"]
